force-app/main/default/objects/Shipment2__c/Shipment2__c.object-meta.xml
<CustomObject>
    <description>Custom Implementation for Order object, for logistics tracking.</description>
    <label>Shipment2</label>
    <nameField>
        <label>Shipment2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment2s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>