force-app/main/default/objects/Shipment2__c/fields/Shipment_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Account_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Account Name</label>
    <type>Text</type>
</CustomField>