force-app/main/default/objects/Shipment2__c/fields/Shipment_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Contact_Name__c</fullName>
    <label>Shipment Contact Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>