force-app/main/default/objects/Shipment2__c/fields/Shipment_Items_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Items_Summary__c</fullName>
    <label>Shipment Items Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>