force-app/main/default/objects/Shipment2__c/fields/To_Pay__c.field-meta.xml
<CustomField>
    <fullName>To_Pay__c</fullName>
    <label>To Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>